# SunCastPy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md
.devcontainer/: .env.template  devcontainer.json  docker-compose.yml
.github/workflows/: Forecast-Git-Page.yml  Pull-Request.yml
SunCastPy/: pyproject.toml
SunCastPy/src/SunCastPy/: NOAA_Forecast.py  api.py  main.py  multi_city_html.py  utils.py
SunCastPy/src/SunCastPy/Forecast/: Base_Forecast.py  NOAA_Local_Forecast.py  Weekly_Forecast.py
SunCastPy/src/SunCastPy/data/: sju_zones.py  zones.py  zones_url.json  zones_url.py  zones_url_grouped.json
SunCastPy/src/SunCastPy/models/NOAA/: base.py  base_local_forecast.py  local_forecast.py  weekly_forecast.py
SunCastPy/src/SunCastPy/report/: city.py  zone.py
SunCastPy/src/SunCastPy/templates/: index.html.j2
SunCastPy/src/SunCastPy/utils/: cli_args.py  current_weather.py  export_file.py  html_renderer.py  logging_config.py  sju_zones.py  utils.py
SunCastPy/tests/: conftest.py  test_NOAA_Local_Forecast.py  test_Weekly_Forecast.py  test_api.py  test_current_weather.py  test_get_data.py  test_utils.py  test_zones.py
SunCastPy/tests/data/: NOAA_SJU.json  NOAA_SJU_forecastHourly.json  expected_forecast_flat.py  grouped_url.py
SunCastPy/tests/robot/: cli_generation.robot
SunCastPy/tests/robot/cli_generation/: type_city_group_date.robot  type_city_group_date_and_flatten.robot  type_city_group_date_no_flatten.robot  type_coord_group_date.robot  type_zone_group_date.robot
SunCastPy/tests/robot/resources/: HtmlKeywords.py  browser_keywords.robot  cli_generation_browser.robot  cli_generation_setup.robot  keywords.robot  tempdir.py  variables.py
SunCastPy/tests/utils/: test_export_file.py  test_html_renderer.py  test_sju_zones.py  test_utils.py
scripts/: docker-postCreateCommand.sh  visualize_NOAA_SJU_forecastHourly_data.py
scripts/ci-cd/: run-robot.sh  run-semgrep.sh
scripts/github/: create-forecast-report.sh  install-project.sh
