[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SunCastPy"
version = "0.1.0"
description = "Starter app to get weather data and estimate if solar panels will charge and if clothes can dry in the sun."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Karilys Collazo", email = "karilys.learn@gmail.com" }]

dependencies = ["requests", "pydantic", 'jinja2']

[project.optional-dependencies]
dev = ["ruff", "mypy", "djlint"]
tests = ["pytest", "pytest-cov", "pytest-html"]

[project.scripts]
forecast = "SunCastPy.main:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*", "*.j2"]
exclude = ["test*"]

[tool.setuptools.package-data]
SunCastPy = ["templates/*.j2"]

# Optional dynamic versioning
# [tool.setuptools.dynamic]
# version = { attr = "app.__version__" }
[tool.pytest.ini_options]
addopts = """
    --cov=SunCastPy
    --cov-report=term-missing
    --cov-fail-under=90
    --cov-report=html:reports/coverage
    --html=reports/pytest-report.html
    --self-contained-html
    -p no:cacheprovider
    -vv
"""

testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/conftest.py", "*/test/*", "*/tests/*", "logging_config.py"]

[tool.coverage.report]
omit = ["*/conftest.py", "*/test/*", "*/tests/*"]
[tool.pylint.main]
disable = []

[tool.pylint.messages_control]
enable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
