[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SunCastPy"
version = "0.1.0"
description = "Starter app to get weather data and estimate if solar panels will charge and if clothes can dry in the sun."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Karilys Collazo", email = "karilys.learn@gmail.com" }]

dependencies = ["requests", "pydantic", 'jinja2']

[project.optional-dependencies]
dev = ["ruff", "mypy", "djlint", "pre-commit", "robotframework-robocop"]
tests = ["pytest", "pytest-cov", "pytest-html", "pylint"]
test-robot = ["robotframework"]
test-robot-adv = ["robotframework-browser"]

[project.scripts]
forecast = "SunCastPy.main:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["test*"]

[tool.setuptools.package-data]
SunCastPy = ["templates/*.j2", "data/*"]

# Optional dynamic versioning
# [tool.setuptools.dynamic]
# version = { attr = "app.__version__" }
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    --cov=SunCastPy
    --cov-report=term-missing
    --cov-fail-under=90
    --cov-report=html:reports/coverage
    --html=reports/pytest-report.html
    --self-contained-html
    --junitxml=reports/junit.xml
    -p no:cacheprovider
    -vv
    -s 
    --log-cli-level=INFO
"""

[tool.coverage.run]
source = ["SunCastPy"]
omit = ["*/conftest.py", "*/test/*", "*/tests/*", "logging_config.py"]

[tool.coverage.paths]
source = [
    "SunCastPy",
    "src/SunCastPy",
    "SunCastPy/src/SunCastPy",
    "*/site-packages/SunCastPy",
]

[tool.coverage.report]
omit = ["*/conftest.py", "*/test/*", "*/tests/*"]
exclude_lines = ["pragma: no cover", "def main", "if __name__ == .__main__.:"]

[tool.pylint.main]
disable = []

[tool.pylint."messages control"]
enable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
disable = [
    "logging-fstring-interpolation",
    "logging-format-interpolation",
    "import-error",
]


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
# ["E", "F", "D"] Disabling D doc strings first line must end in .

[tool.ruff.lint.pydocstyle]
convention = "google"
